--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,12 @@
         <encoding>UTF-8</encoding>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <serenity.version>2.2.0</serenity.version>
-        <serenity.maven.version>2.2.0</serenity.maven.version>
+        <serenity.version>3.2.3</serenity.version>
+        <serenity.maven.version>3.2.3</serenity.maven.version>
         <hamcrest.version>1.3</hamcrest.version>
         <junit.version>4.12</junit.version>
         <slf4j.version>1.7.36</slf4j.version>
-        <serenity.cucumber.version>2.2.0</serenity.cucumber.version>
+        <serenity.cucumber.version>3.2.3</serenity.cucumber.version>
         <parallel.tests>2</parallel.tests>
     </properties>
 
@@ -32,7 +32,7 @@
         </dependency>
         <dependency>
             <groupId>net.serenity-bdd</groupId>
-            <artifactId>serenity-cucumber5</artifactId>
+            <artifactId>serenity-cucumber</artifactId>
             <version>${serenity.cucumber.version}</version>
         </dependency>
         <dependency>
