--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,17 @@
         <junit.version>4.12</junit.version>
         <slf4j.version>1.7.36</slf4j.version>
         <serenity.cucumber.version>3.2.3</serenity.cucumber.version>
+        <rest-assured.version>5.0.1</rest-assured.version>
         <parallel.tests>2</parallel.tests>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${rest-assured.version}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>net.serenity-bdd</groupId>
             <artifactId>serenity-core</artifactId>
