--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -1,7 +1,7 @@
 webdriver {
   driver = chrome
   use.driver.service.pool = false
-  autodownload = true
+  autodownload = false
 
 }
 headless.mode = false
@@ -11,12 +11,19 @@ serenity {
   restart.browser.for.each = scenario
 }
 
+drivers {
+  mac {
+    webdriver.chrome.driver = src/test/resources/driver/chromedriver
+  }
+}
+
 #
 # Chrome options can be defined using the chrome.switches property
 #
 chrome.switches="""--start-maximized;--test-type;--no-sandbox;--ignore-certificate-errors;
                    --disable-popup-blocking;--disable-default-apps;--disable-extensions-file-access-check;
                    --incognito;--disable-infobars,--disable-gpu"""
+#
 #
 # This section defines environment-specific configuration for different environments.
 # You can define normal Serenity properties, such as webdriver.base.url, or custom ones
